audio width increased

--- a/less/main.less
+++ b/less/main.less
@@ -86,6 +86,10 @@ html {
                     video {
                         width: 100%;
                     }
+
+                    audio {
+                        width: 100%;
+                    }
                 }
             }
 
